src/app/pages/home/components/main/components/post/post.component.scss
@import "../../../../../../../styles.scss";

.post-container {
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  border-radius: $border-radius;
  background-color: rgb(238, 182, 255);
  margin: 40px 0px;
  padding: 10px;

  .header {
    margin-bottom: 10px;
    .profile-icon-container {
      .icon {
        width: 45px;
        aspect-ratio: 1/1;
        border-radius: 50%;
      }
    }

    .options-container {
      .icon {
        cursor: pointer;
      }
    }
  }

  .tags-container {
    flex-wrap: wrap;
    margin: 10px 0px;

    .tag {
      position: relative;
      margin: 5px;
      height: 45px;
      padding: 5px 15px;
      color: rgb(255, 255, 255);
      background-color: rgba(249, 39, 249, 1);
      border-radius: $border-radius;
      display: inline-flex;
      align-items: center;
    }
  }

  .images-container {
    border-radius: $border-radius;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 720px;
    background-color: white;
    overflow: hidden;

    .image {
      object-fit: cover;
      width: 100%;
      height: 100%;
      border-radius: $border-radius;
      position: absolute;
      transition: transform 0.2s ease-in-out;
    }

    .active {
      transform: translateX(0);
    }

    .prev {
      transform: translateX(-100%);
    }

    .next {
      transform: translateX(100%);
    }

    .arrow-container {
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      width: 40px;
      height: 40px;
      background-color: rgba(0, 0, 0, 0.6);
      border-radius: 50%;
      cursor: pointer;

      .arrow {
        width: 20px;
        height: 20px;
      }
    }

    .left-arrow-container {
      left: 10px;
      top: 50%;
      cursor: pointer;
      transform: translateY(-50%);
    }

    .right-arrow-container {
      right: 10px;
      top: 50%;
      transform: translateY(-50%);
    }

    .dots-container {
      position: absolute;
      bottom: 10px;
      display: flex;
      justify-content: center;
      width: 100%;

      .dot {
        width: 10px;
        height: 10px;
        margin: 0 5px;
        background-color: rgba(255, 255, 255, 0.5);
        border-radius: 50%;
        cursor: pointer;
        transition: background-color 0.3s ease;
      }

      .dot.active {
        background-color: white;
      }
    }
  }

  .interactions-container {
    margin-top: 10px;

    .interaction-icon {
      cursor: pointer;
    }
  }

  .add-comment-container {
    margin-top: 20px;
    .profile-icon-container {
      .icon {
        width: 45px;
        aspect-ratio: 1/1;
        border-radius: 50%;
      }
    }

    .form-control {
      width: 100%;
      border-radius: 25px;
      height: 45px;

      &:focus {
        outline: none;
        box-shadow: none;
      }
    }
  }
}

@media screen and (max-width: 768px) {
  .post-container {
    border-radius: 0px;
  }
}

